--- a/src/nodes/ui_led/ui_led.html/editor.html
+++ b/src/nodes/ui_led/ui_led.html/editor.html
@@ -18,6 +18,11 @@
     <input type="hidden" id="node-input-height">
     <button class="editor-button" id="node-input-size"></button>
   </div>
+  
+  <div class="form-row">
+    <label for="node-input-property"><i class="fa fa-arrow-right"></i> Input</label>
+    <input type="text" id="node-input-property" style="width:70%;"/>
+  </div>
 
   <div class="form-row">
     <label for="node-input-label"><i class="icon-tag"></i>  <span data-i18n="editor:editor.label"></span></label>
